# type-sitter

./: .git-blame-ignore-revs  .gitignore  .gitmodules  Cargo.toml  README.md  publish.sh  test.sh
.github/workflows/: ci.yml  rust.yml
src/: deserialize_json_array_as_stream.rs  error.rs  generate.rs  impl.rs  lib.rs  make_valid.rs  node_types.rs  print.rs
type-sitter/: Cargo.toml  README.md
type-sitter-cli/: .gitignore  Cargo.toml  README.md  test.sh
type-sitter-cli/src/: args.rs  errors.rs  main.rs  path_utils.rs  process.rs
type-sitter-cli/test-generated/: mod.rs
type-sitter-cli/test-generated/alt/: json.rs  mod.rs  rust.rs
type-sitter-cli/test-generated/json/: mod.rs  nodes.rs  queries.rs
type-sitter-cli/test-generated/python/: mod.rs  nodes.rs  queries.rs
type-sitter-cli/test-generated/rust/: mod.rs  nodes.rs  queries.rs
type-sitter-gen/: Cargo.toml  README.md  build.rs
type-sitter-gen/examples/json/: mod.rs
type-sitter-gen/examples/rust/: mod.rs
type-sitter-gen/src/: anon_unions.rs  deserialize_json_array_as_stream.rs  error.rs  generated_tokens.rs  lib.rs  make_valid.rs  mk_syntax.rs  names.rs  node_types.rs  print.rs  print_ctx.rs  types.rs  vec_set.rs
type-sitter-gen/src/node_types/: deserialize_json_array_as_stream.rs  detail_doc.rs  generated_tokens.rs  mod.rs  names.rs  print.rs  rust_names.rs  types.rs
type-sitter-gen/src/queries/: dyload_language.rs  generated_tokens.rs  mod.rs  print.rs  sexp.rs  sexp_node_type.rs
type-sitter-gen/tests/: parse_node_types.rs  parse_queries.rs  test.rs
type-sitter-gen/tests/common/: mod.rs
type-sitter-lib/: Cargo.toml  README.md
type-sitter-lib/src/: either_n.rs  extra_or.rs  gen_internal.rs  incorrect_kind.rs  lib.rs  typed_node.rs  typed_query.rs  typed_tree.rs
type-sitter-lib/src/node/: cursor.rs  incorrect_kind.rs  mod.rs  parser.rs  tree.rs  unwrap_and_flatten_multi.rs  wrappers.rs
type-sitter-lib/src/query/: captures.rs  cursor.rs  match_captures.rs  matches.rs  mod.rs
type-sitter-lib/src/tree_sitter_wrapper/: mod.rs  utf8_error_offset_by.rs
type-sitter-lib/src/typed_node/: extra_or.rs  incorrect_kind.rs  mod.rs  untyped_nodes.rs  unwrap_and_flatten_multi.rs
type-sitter-lib/src/typed_query/: captures.rs  cursor_ext.rs  match_captures.rs  matches.rs  mod.rs
type-sitter-lib/tests/: use_node_types.rs  use_queries.rs
type-sitter-lib/tests/c/: mod.rs  nodes.rs  queries.rs
type-sitter-lib/tests/json/: mod.rs  nodes.rs  queries.rs
type-sitter-lib/tests/python/: nodes.rs  queries.rs
type-sitter-lib/tests/rust/: mod.rs  nodes.rs  queries.rs
type-sitter-proc/: Cargo.toml  README.md
type-sitter-proc-tests/: Cargo.toml  README.md
type-sitter-proc-tests/tests/: json.rs  rust.rs
type-sitter-proc/src/: generate_nodes_args.rs  generate_queries_args.rs  lib.rs  lit_str_and_lit_str_and_path_and_path.rs  lit_str_and_path.rs
type-sitter/src/: lib.rs
type-sitter/tests/: json.rs  regressions.rs  rust.rs
yak-sitter/: Cargo.toml  README.md
yak-sitter/src/: define_custom_wrapper.rs  lib.rs  utf8_error_offset_by.rs
