[workspace]
resolver = "2"
members = [
    "type-sitter-cli",
    "type-sitter-gen",
    "type-sitter-lib",
    "type-sitter-proc",
    "type-sitter-proc-tests",
    "yak-sitter",
]
exclude = [
    "vendor"
]

[patch.crates-io]
# Newer versions necessary to get the correct tree-sitter transitive dependency, but they're only published on GitHub
tree-sitter-json = { git = "https://github.com/tree-sitter/tree-sitter-json.git", rev = "3b129203f4b72d532f58e72c5310c0a7db3b8e6d" }
tree-sitter-rust = { git = "https://github.com/Jakobeha/tree-sitter-rust.git", rev = "e77585758f8dcf8e6f11fcc923b0c88322e863c1" }