[workspace]
resolver = "2"
members = [
    "type-sitter",
    "type-sitter-cli",
    "type-sitter-gen",
    "type-sitter-lib",
    "type-sitter-proc",
    "yak-sitter",
]
exclude = [
    "vendor"
]

[workspace.package]
version = "0.7.4"
authors = ["Jakob Hain <jakobeha@fastmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jakobeha/type-sitter/"
categories = ["parsing", "compilers"]
keywords = ["type-sitter", "tree-sitter"]
edition = "2021"

[workspace.dependencies]
type-sitter-gen = { path = "type-sitter-gen", version = "0.7" }
type-sitter-lib = { path = "type-sitter-lib", version = "0.7" }
type-sitter-proc = { path = "type-sitter-proc", version = "0.7" }
yak-sitter = { path = "yak-sitter", version = "0.7" }
streaming-iterator = "0.1"
syn = "2.0"
tree-sitter = "0.25"
tree-sitter-json = { path = "vendor/tree-sitter-json", version = "0.24" }
tree-sitter-rust = { path = "vendor/tree-sitter-rust", version = "0.23" }