[package]
name = "type-sitter-cli"
version.workspace = true
authors.workspace = true
description = "CLI for type-sitter (generate typed wrappers for tree-sitter grammars from node-types.json and queries)"
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
type-sitter-gen = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
rust-format = "0.3"
