[package]
name = "type-sitter-gen"
version = "0.5.3"
authors = ["Jakob Hain <jakobeha@fastmail.com>"]
description = "generate typed wrappers for tree-sitter grammars from node-types.json and queries"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jakobeha/type-sitter/"
categories = ["parsing", "compilers"]
keywords = ["type-sitter", "tree-sitter"]
edition = "2021"

[dependencies]
convert_case = "0.6.0"
check_keyword = "0.3.1"
proc-macro2 = "1.0.86"
quote = "1.0.37"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
syn = "2.0.77"
enum-map = "3.0.0-beta.2"
join-lazy-fmt = "0.9.2"
tree-sitter = "0.24.3"
tree-sitter-language = "0.1.0"
libc = "0.2.158"
cc = "1.1.18"
libloading = "0.8.5"
walkdir = "2.5.0"
logos = "0.14.1"
slice-group-by = "0.3.1"
prettyplease = "0.2.22"

[dev-dependencies]
# to make these libraries available in doctests
tree-sitter-rust = { path = "../vendor/tree-sitter-rust" }
tree-sitter-json = { path = "../vendor/tree-sitter-json" }
