[package]
name = "type-sitter-gen"
version.workspace = true
authors.workspace = true
description = "generate typed wrappers for tree-sitter grammars from node-types.json and queries"
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
convert_case = "0.6.0"
check_keyword = "0.3.1"
proc-macro2 = "1.0.86"
quote = "1.0.37"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
syn = { workspace = true }
enum-map = "3.0.0-beta.2"
join-lazy-fmt = "0.9.2"
tree-sitter = { workspace = true }
tree-sitter-language = "0.1.5"
libc = "0.2.158"
cc = "1.1.18"
libloading = "0.8.5"
walkdir = "2.5.0"
logos = "0.15.0"
slice-group-by = "0.3.1"
prettyplease = "0.2.22"

[dev-dependencies]
# to make these libraries available in doctests
tree-sitter-rust = { path = "../vendor/tree-sitter-rust" }
tree-sitter-json = { path = "../vendor/tree-sitter-json" }
