[package]
name = "type-sitter-gen"
version.workspace = true
authors.workspace = true
description = "generate typed wrappers for tree-sitter grammars from node-types.json and queries"
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
convert_case = "0.8"
check_keyword = "0.4.1"
dunce = "1.0.5"
proc-macro2 = "1.0"
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-stable-hash = "0.1.2"
syn = { workspace = true }
enum-map = "3.0.0-beta"
join-lazy-fmt = "0.9"
tree-sitter = { workspace = true }
tree-sitter-language = "0.1"
libc = "0.2"
cc = "1.2"
libloading = "0.8"
walkdir = "2.5"
logos = "0.15"
slice-group-by = "0.3"
prettyplease = "0.2"

[dev-dependencies]
tree-sitter-rust = { workspace = true }
