[package]
name = "type-sitter-lib"
version = "0.5.0"
description = "library code for type-sitter generated / downstream code"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jakobeha/type-sitter/"
categories = ["parsing", "compilers"]
keywords = ["type-sitter", "tree-sitter"]
edition = "2021"

[features]
yak-sitter = ["dep:yak-sitter"]

[dependencies]
tree-sitter = "0.23.0"
streaming-iterator = "0.1.9"
yak-sitter = { path = "../yak-sitter", version = "0.5.0", optional = true}

[dev-dependencies]
tree-sitter-rust = "0.23.0"
tree-sitter-json = "0.23.0"
