[package]
name = "type-sitter-lib"
version.workspace = true
authors.workspace = true
description = "library code for type-sitter generated / downstream code"
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true

[features]
yak-sitter = ["dep:yak-sitter"]

[dependencies]
tree-sitter = { workspace = true }
yak-sitter = { workspace = true, optional = true }
streaming-iterator = { workspace = true }

[dev-dependencies]
tree-sitter-rust = { workspace = true }
tree-sitter-json = { workspace = true }
