[package]
name = "type-sitter-proc-tests"
version = "0.1.2"
authors = ["Jakob Hain <jakobeha@fastmail.com>"]
description = "small crate to test type-sitter-proc macros"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jakobeha/type-sitter/"
categories = ["parsing", "compilers"]
keywords = ["type-sitter", "tree-sitter"]
edition = "2021"

[dev-dependencies]
type-sitter-proc = { path = "../type-sitter-proc", version = "0.1.2" }
type-sitter-lib = { path = "../type-sitter-lib", version = "0.1.1" }
tree-sitter-json = { path = "../vendor/tree-sitter-json", version = "0.20.0" }
tree-sitter-rust = { path = "../vendor/tree-sitter-rust", version = "0.20.3" }
tree-sitter = "0.20.10"
