[package]
name = "type-sitter-proc-tests"
version = "0.5.0"
authors = ["Jakob Hain <jakobeha@fastmail.com>"]
description = "small crate to test type-sitter-proc macros"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jakobeha/type-sitter/"
categories = ["parsing", "compilers"]
keywords = ["type-sitter", "tree-sitter"]
edition = "2021"

[dev-dependencies]
type-sitter-proc = { path = "../type-sitter-proc", version = "0.5.0" }
type-sitter-lib = { path = "../type-sitter-lib", version = "0.5.0" }
tree-sitter-json = "0.23.0"
tree-sitter-rust = "0.23.0"
tree-sitter = "0.23.0"
streaming-iterator = "0.1.9"