[package]
name = "type-sitter-proc"
version = "0.5.4"
authors = ["Jakob Hain <jakobeha@fastmail.com>"]
description = "procedural macros for type-sitter (generate typed wrappers for tree-sitter grammars from node-types.json and queries)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jakobeha/type-sitter/"
categories = ["parsing", "compilers"]
keywords = ["type-sitter", "tree-sitter"]
edition = "2021"

[lib]
proc-macro = true

[features]
yak-sitter = []

[dependencies]
type-sitter-gen = { path = "../type-sitter-gen", version = "0.5.4" }
proc-macro2 = "1.0.86"
syn = "2.0.77"