[package]
name = "type-sitter-proc"
version.workspace = true
authors.workspace = true
description = "procedural macros for type-sitter (generate typed wrappers for tree-sitter grammars from node-types.json and queries)"
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[features]
yak-sitter = []

[dependencies]
type-sitter-gen = { workspace = true }
syn = { workspace = true }