[package]
name = "type-sitter"
version.workspace = true
authors.workspace = true
description = "generate typed wrappers for tree-sitter grammars from node-types.json and queries"
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true

[lib]
# Don't run recursive doc-tests, because they're already tested, but they fail in this crate for some reason.
doctest = false

[features]
default = ["proc"]
proc = ["dep:type-sitter-proc"]
yak-sitter = ["type-sitter-proc/yak-sitter", "type-sitter-lib/yak-sitter"]

[dependencies]
type-sitter-proc = { workspace = true, optional = true }
type-sitter-lib = { workspace = true }

[dev-dependencies]
tree-sitter-c = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-rust = { workspace = true }
