[package]
name = "yak-sitter"
version = "0.6.1"
description = "opinionated tree-sitter facade which lets you store data visible to nodes and provides other improvements"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jakobeha/type-sitter/"
categories = ["parsing", "compilers"]
keywords = ["tree-sitter"]
edition = "2021"

[dependencies]
tree-sitter = "0.24.3"
streaming-iterator = "0.1.9"

[dev-dependencies]
tree-sitter-rust = "0.23.0"
tree-sitter-json = "0.23.0"
