[package]
name = "yak-sitter"
version.workspace = true
authors.workspace = true
description = "opinionated tree-sitter facade which lets you store data visible to nodes and provides other improvements"
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
tree-sitter = { workspace = true }
streaming-iterator = { workspace = true }

[dev-dependencies]
tree-sitter-rust = { workspace = true }
tree-sitter-json = { workspace = true }
